--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -17,35 +17,35 @@
 {% endblock %}
 {% block indicator_title %}
     <h2 class="text-center">
-	<strong>Transferencias Municipales</strong><br />
-         Tasa de crecimiento promedio anual  
+        <strong>Transferencias Municipales</strong><br/>
+        Tasa de crecimiento promedio anual
     </h2>
     <hr class="pma-line-5"/>
     <h4 class="text-center">
-	{% if municipio %}
-	    <strong>{{ municipio }}</strong><br/>
-	{% else %}
-	    Por grupo de municipios
-	{% endif %}</h4>
+        {% if municipio %}
+            <strong>{{ municipio }}</strong><br/>
+        {% else %}
+            Por grupo de municipios
+        {% endif %}</h4>
     <p class="text-center metric-description container"></p>
 {% endblock %}
 {% block section1 %}
     <div class="container wide">
         <div class="row">
             {% if request.GET.municipio %}
-                    <div class="col-lg-12 col-md-12">
-                        <h2>
-				Tasa de crecimiento promedio anual de 
-				por período de gobierno<br />
-                        </h2>
-                        <h4>Evolución de las asignaciones por uso y total</h4>
-                        <hr class="pma-line-1"/>
-                    </div>
+                <div class="col-lg-12 col-md-12">
+                    <h2>
+                        Tasa de crecimiento promedio anual de
+                        por período de gobierno<br/>
+                    </h2>
+                    <h4>Evolución de las asignaciones por uso y total</h4>
+                    <hr class="pma-line-1"/>
+                </div>
 
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <form class="navbar-form navbar-right">
                         Elija el municipio con el cual desea comparar a {{ municipio }}:
-			<select class="form-control" name="municipio2" id="municipio2">
+                        <select class="form-control" name="municipio2" id="municipio2">
                             <option value="">(Municipio)</option>
                             {% for municipio in municipios %}
                                 <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
@@ -56,15 +56,23 @@
 
 
                 <div class="col-lg-6 col-md-6 col-sm-6">
-		    <h2>{{ municipio }}</h2>
+                    <h2>{{ municipio }}</h2>
                     <table class="table table-bordered">
                         <thead>
+                        <tr class="bg-primary">
+                            <th>Partido de gobierno</th>
+                            {% for partido in partidos %}
+                                {% if not forloop.first %}
+                                    <td class="text-center">{{ partido.nombre }}</td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
                         <tr class="bg-primary">
                             <th>Clase</th>
                             {% for periodo in periodos %}
                                 {% if not forloop.first %}
                                     <th>{{ periodo }}<br>{{ periodo.clasificacion }}</th>
-				{% endif %}
+                                {% endif %}
                             {% endfor %}
                         </tr>
                         </thead>
@@ -76,9 +84,9 @@
                                     {% if not forloop.first %}
                                         <td class="text-right">{% if value != '' %}
                                             {{ value|floatformat:2 }}%
-                                            {% endif %}
-				        </td>
-				    {% endif %}
+                                        {% endif %}
+                                        </td>
+                                    {% endif %}
                                 {% endfor %}
                             </tr>
                             <tr>
@@ -87,9 +95,9 @@
                                     {% if not forloop.first %}
                                         <td class="text-right">{% if value != '' %}
                                             {{ value|floatformat:2 }}%
-                                            {% endif %}
-					</td>
-				    {% endif %}
+                                        {% endif %}
+                                        </td>
+                                    {% endif %}
                                 {% endfor %}
                             </tr>
                             <tr>
@@ -99,25 +107,32 @@
                                         <td class="text-right">{% if value != '' %}
                                             {{ value|floatformat:2 }}%
                                         {% endif %}</td>
-				    {% endif %}
+                                    {% endif %}
                                 {% endfor %}
                             </tr>
                         {% endfor %}
                         </tbody>
                     </table>
                 </div>
-
                 {% if request.GET.municipio2 %}
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <h3>{{ municipio2 }}</h3>
                         <table class="table table-bordered">
                             <thead>
+                             <tr class="bg-primary">
+                            <th>Partido de gobierno</th>
+                            {% for partido in partidos_municpio2 %}
+                                {% if not forloop.first %}
+                                    <td class="text-center">{{ partido.nombre }}</td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
                             <tr class="bg-primary">
                                 <th>Clase</th>
                                 {% for periodo in periodos %}
                                     {% if not forloop.first %}
                                         <th>{{ periodo }}<br>{{ periodo.clasificacion }}</th>
-				    {% endif %}
+                                    {% endif %}
                                 {% endfor %}
                             </tr>
                             </thead>
@@ -130,7 +145,7 @@
                                             <td class="text-right">{% if value != '' %}
                                                 {{ value|floatformat:2 }}%
                                             {% endif %}</td>
-					{% endif %}
+                                        {% endif %}
                                     {% endfor %}
                                 </tr>
                             {% endfor %}
@@ -142,8 +157,8 @@
                                             <td class="text-right">{% if value != '' %}
                                                 {{ value|floatformat:2 }}%
                                             {% endif %}</td>
-					{% endif %}
-                                     {% endfor %}
+                                        {% endif %}
+                                    {% endfor %}
                                 </tr>
                             {% endfor %}
                             {% for clasificacion in clasificaciones2 %}
@@ -154,7 +169,7 @@
                                             <td class="text-right">{% if value != '' %}
                                                 {{ value|floatformat:2 }}%
                                             {% endif %}</td>
-					 {% endif %}
+                                        {% endif %}
                                     {% endfor %}
                                 </tr>
                             {% endfor %}
@@ -190,7 +205,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12">
                             <h2>
-				Tasa de crecimiento promedio anual
+                                Tasa de crecimiento promedio anual
                                 por período de gobierno
                             </h2>
                             <h4>Asignaci&oacute;n total</h4>
@@ -230,9 +245,9 @@
                             <div id="line_chart1"></div>
                         </div>
                         <div class="col-lg-12 col-md-12">
-                            <h2>Tasa de crecimiento promedio anual<br />
-				Asignaci&oacute;n por grupo de municipios
-				por período de gobierno
+                            <h2>Tasa de crecimiento promedio anual<br/>
+                                Asignaci&oacute;n por grupo de municipios
+                                por período de gobierno
                             </h2>
                             <h4>Gastos corrientes</h4>
                             <hr class="pma-line-1"/>
@@ -270,9 +285,9 @@
                             <div id="line_chart2"></div>
                         </div>
                         <div class="col-lg-12 col-md-12">
-			    <h2>Tasa de crecimiento promedio anual<br />
-				Asignaci&oacute;n por grupo de municipios
-                               	por período de gobierno
+                            <h2>Tasa de crecimiento promedio anual<br/>
+                                Asignaci&oacute;n por grupo de municipios
+                                por período de gobierno
                             </h2>
                             <h4>Gastos de capital</h4>
                             <hr class="pma-line-1"/>
