--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -151,7 +151,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div id="bar_chart" class="view-alternative"> grafico de barras
+                    <div id="stacked_chart" class="view-alternative"> grafico de barras
                     </div>
                 </div>
 
