--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -72,7 +72,7 @@
                     </table>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div id="bar_chart"></div>
+                    <div id="stacked_chart"></div>
                 </div>
                 {% if request.GET.municipio2 %}
                     <h3>{{ municipio2 }}</h3>
@@ -200,6 +200,26 @@
                     },
                 ];
                 graphChart('stacked_chart', charts_dict['stacked_years'], custom_options);
+            {% else %}
+                custom_options['title'] = 'Transferencias por año';
+                custom_options['subtitle'] = '';
+
+                charts_dict['stacked_municipio1'] = [
+                    {
+                        'name': 'corriente',
+                        'stack': 0,
+                        'color': '#337AB7',
+                        'data': [{% for row in data_asignacion|keyvalue:'corriente' %}{{  row|million }}, {% endfor %}],
+                    },
+                    {
+                        'name': 'capital',
+                        'stack': 0,
+                        'color': '#7cb5ec',
+                        'data': [{% for row in data_asignacion|keyvalue:'capital' %}{{  row|million }}, {% endfor %}]
+                    },
+                ];
+
+                graphChart('stacked_chart', charts_dict['stacked_municipio1'], custom_options);
             {% endif %}
         });
     </script>
