creando arreglo de datos para grafico de municipio 2

--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -99,7 +99,7 @@
                         </table>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div id="chart2"></div>
+                        <div id="stacked_chart2"></div>
                     </div>
                 {% endif %}
             {% else %}
@@ -219,7 +219,26 @@
                     },
                 ];
 
+                {% if municipio2 %}
+
+                    charts_dict['stacked_municipio2'] = [
+                        {
+                            'name': 'corriente',
+                            'stack': 0,
+                            'color': '#337AB7',
+                            'data': [{% for row in data_asignacion2|keyvalue:'corriente' %}{{  row|million }}, {% endfor %}],
+                        },
+                        {
+                            'name': 'capital',
+                            'stack': 0,
+                            'color': '#7cb5ec',
+                            'data': [{% for row in data_asignacion2|keyvalue:'capital' %}{{  row|million }}, {% endfor %}]
+                        },
+                    ];
+                {% endif %}
+
                 graphChart('stacked_chart', charts_dict['stacked_municipio1'], custom_options);
+                graphChart('stacked_chart2', charts_dict['stacked_municipio2'], custom_options);
             {% endif %}
         });
     </script>
