retornando filtro por municipio y solo mostrarlos si se encuentra en urls indicadores de transferencias

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -33,6 +33,7 @@
                         <a href="{% url 'importar' %}" class="btn btn-primary pull-right mr-5px">Ir a
                             Importador</a>
                     {% endif %}
+
                 {% elif request.resolver_match.url_name == 'rengloningreso' or request.resolver_match.url_name == 'renglon-gasto' %}
 
                     {% if request.resolver_match.url_name == 'rengloningreso' %}
@@ -47,19 +48,20 @@
                     {% endif %}
                     <a href="{% url 'importar' %}" class="btn btn-primary pull-right mr-5px">Ir a
                         Importador</a>
+
                 {% else %}
                     <div class="col-md-12">
                         <form id="indicatorfilter" method="GET">
                             <div class="row">
-                                {% if municipio %}
-                                    <div class="col-lg-6 col-md-6 text-center">
-                                        <h2 class="title-municipio-name">{{ municipio.nombre }}</h2>
-                                        <input type="hidden" name="municipio" class="form-control"
-                                               value="{{ municipio.slug }}">
-                                    </div>
-                                {% endif %}
 
-                                {% if request.resolver_match.url_name != 'transferencias' %}
+                                {% if request.resolver_match.url_name != 'transferencias' and request.resolver_match.url_name != 'tasa_transferencias' %}
+                                    {% if municipio %}
+                                        <div class="col-lg-6 col-md-6 text-center">
+                                            <h2 class="title-municipio-name">{{ municipio.nombre }}</h2>
+                                            <input type="hidden" name="municipio" class="form-control"
+                                                   value="{{ municipio.slug }}">
+                                        </div>
+                                    {% endif %}
                                     <div class="col-xs-4 col-sm-2 col-md-1">
                                         <span class="pma-fg-light-green titsearch years"><strong>A&ncaron;o</strong></span>
                                         <select name="year" id="year">
@@ -69,9 +71,31 @@
                                             {% endfor %}
                                         </select>
                                     </div>
+                                {% else %}
+                                    <div class="col-lg-3 col-md-3 col-md-offset-7 col-md-offset-7">
+                                        <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
+                                        <select class="municipio" name="municipio" id="municipio">
+                                            <optgroup>
+                                                <option value="">Todos</option>
+                                            </optgroup>
+                                            {% regroup municipios by depto as departamentos %}
+                                            {% for departamento in departamentos %}
+                                                <optgroup label="{{ departamento.grouper }}">
+                                                    {% for m in departamento.list %}
+                                                        <option value="{{ m.slug }}"
+                                                                {% ifequal request.GET.municipio m.slug %}
+                                                                selected="selected"
+                                                                {% endifequal %}>
+                                                            {{ m.nombre }}
+                                                        </option>
+                                                    {% endfor %}
+                                                </optgroup>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
                                 {% endif %}
 
-                                {% if request.resolver_match.url_name == 'municipio' or request.GET.municipio %}
+                                {% if request.resolver_match.url_name == 'municipio' or request.GET.municipio and request.resolver_match.url_name != 'transferencias' and request.resolver_match.url_name != 'tasa_transferencias' %}
                                     <div class="col-xs-9 col-sm-5 col-md-4 indicadores">
                                         <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                                         <select name="indicador" class="indicador" id="indicador">
@@ -119,7 +143,7 @@
                                 {% endif %}
 
 
-                                <div class="col-xs-2 col-sm-1 col-md-1">
+                                <div class="col-lg-1 col-md-1">
                                     <input type="submit" value="Buscar" class="btn buscar"/>
                                 </div>
                             </div>
