--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -81,7 +81,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-left pma-navbar" role="search" id="indicatorfilter" method="GET">
+                    <form class="navbar-form navbar-left pma-navbar" style="display: none;" role="search" id="indicatorfilter" method="GET">
                         <select class="listado-indicadores pull-right" name="indicator">
                             <option value=""></option>
                             <option value="{% url 'origen_ingresos' %}">
@@ -110,7 +110,7 @@
                             </option>
                         </select>
                     </form>
-                    <form class="navbar-form navbar-left pma-navbar" role="search">
+                    <form class="navbar-form navbar-left pma-navbar" style="display: none;" role="search">
                         <select class="listado-municipios pull-right" name="municipio">
                             <option></option>
                             <!--option class="amarillo">Consolidado Municipal</option-->
@@ -124,7 +124,7 @@
                             {% endfor %}
                         </select>
                     </form>
-                    <form class="navbar-form navbar-left pma-navbar" role="search">
+                    <form class="navbar-form navbar-left pma-navbar" style="display: none;" role="search">
                         <select id="listado-transferencias" class="pull-right" name="transferencias">
                             <option value=""></option>
                             <option value="{% url 'transferencias' %}">
