--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -332,6 +332,21 @@
                             <hr class="pma-line-1"/>
                         </div>
 
+{% for col in data_tasa_col %}
+{% if not forloop.first %}
+<h1>Periodo: {{ periodos_array|index:forloop.counter0 }}</h1>
+<table class="table table-bordered mt-3">
+    {% for row in col %}
+    <tr>
+    <td>{{ row.name }}</td> <td>{{ row.value|floatformat:2 }}</td>
+    </tr>
+    {% endfor %}
+</table>
+<hr>
+{% endif %}
+{% endfor %}
+
+
                         <div class="col-lg-6 col-md-6">
                             <table class="table table-bordered mt-3">
                                 <thead>
