top 10 asc y desc

--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -332,11 +332,24 @@
                             <hr class="pma-line-1"/>
                         </div>
 
-{% for col in data_tasa_col %}
+{% for col in data_tasa_col_des %}
 {% if not forloop.first %}
-<h1>Periodo: {{ periodos_array|index:forloop.counter0 }}</h1>
+<h1>Periodo: {{ periodos_array|index:forloop.counter0 }} DESC</h1>
 <table class="table table-bordered mt-3">
-    {% for row in col %}
+    {% for row in col|slice:":10" %}
+    <tr>
+    <td>{{ row.name }}</td> <td>{{ row.value|floatformat:2 }}</td>
+    </tr>
+    {% endfor %}
+</table>
+<hr>
+{% endif %}
+{% endfor %}
+{% for col in data_tasa_col_asc %}
+{% if not forloop.first %}
+<h1>Periodo: {{ periodos_array|index:forloop.counter0 }} ASC</h1>
+<table class="table table-bordered mt-3">
+    {% for row in col|slice:":10" %}
     <tr>
     <td>{{ row.name }}</td> <td>{{ row.value|floatformat:2 }}</td>
     </tr>
