agregando sub3_slug para portada

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -123,7 +123,7 @@
                         {% for origen in totales_oim %}
                             <div class="col-xs-12 col-sm-6 col-md-6 height-rubro-home">
                                 <div class="info-box">
-                                <span class="info-box-icon pma-fg-green pma-icon {{ origen.subsubtipoingreso__origen__slug }}">
+                                <span class="info-box-icon pma-fg-green pma-icon {{ origen.sub3tipoingreso__origen__nombre }} {{ origen.subsubtipoingreso__origen__slug }}">
                                 </span>
                                     <div class="info-box-content">
                                         <span class="info-box-text">
